golang: refactoring code
